<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MacRemote</string>
    <string name="remote">Remote</string>
    <string name="click_here">Touch Here</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="wifi_not_connected_msg">Wifi is not connected.  Please connect to wifi network.</string>
	<string name="passcode_info_msg">To continue, please enter 4-digit passcode from Mac Application.\n\nMac Application can be downloaded from http://foggyciti.com/remote</string>
	<string name="connected">connected</string>
	<string name="disconnected">disconnected</string>
	<string name="pendingConnection">connecting&#8230;</string>
	<string name="enter_passcode">Enter Passcode:</string>
	<string name="passcodeDisplay">Passcode</string>
	<string name="passcodeSummary">Change passcode used to connect to Mac</string>
	<string name="OK">OK</string>
	<string name="NA">NA</string>
	
	
	<!-- Content descriptions -->
	<string name="settings_btn_cd">Click to view/edit Settings</string>
    <string name="remote_btn_cd">Click to use Remote</string>
	<string name="push_btn_cd">Click to Continue</string>
	<string name="title_icon_cd">Return to home</string>
	
	
	<!-- Debug remote layout strings (should not be translated) -->
	<string name="becomeSuperUserMsg">Welcome!\nYou\'ve just unlocked MacRemote. Happy Debugging!</string>
	<string name="exitSuperUserMsg">You\'ve just left the unlocked version.\nHope you found your bug!</string>
	<string name="gingerbread_broadcast_address">gingerbread broadcast addr: </string>
	<string name="froyo_broadcast_address">froyo broadcast addr: </string>
	<string name="netmask">netmask: </string>
	<string name="received_ping">last ping: </string>
	<string name="expected_ping">expected ping: </string>
	<string name="connection_status">connection status: </string>
	<string name="response_ip">response IP: </string>
	<string name="pings_sent">pings sent: </string>
	
	<!-- System strings (should not be translated) -->
	<string name="passcodeKey">passcodeKey</string>
	
</resources>