<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/passcode_background"
    android:orientation="vertical"
    android:id="@+id/passcode_ll">

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_weight="1.72"
	    android:clickable="false"
	    android:gravity="bottom|center_horizontal"
	    android:text="@string/app_name"
	    android:textSize="40sp"
	    android:textStyle="bold"
	    android:typeface="serif" />

	 <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="48.3" />

   	<LinearLayout
   		android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_weight="41.4"
   	    android:orientation="horizontal" >
    	    
   	    <LinearLayout
   	        android:layout_width="wrap_content"
   	        android:layout_height="match_parent"
   	        android:layout_weight="33.333"/>

   	    <LinearLayout
   	        android:layout_width="60sp"
   	        android:layout_height="match_parent"
   	        android:layout_weight="33.333"
   	        android:orientation="vertical">
   	        
   	        <LinearLayout
   	            android:layout_width="fill_parent"
   	            android:layout_height="wrap_content"
   	            android:layout_weight="33.75"
   	            android:orientation="vertical">
   	            
   	            <TextView
	   		    	android:layout_width="fill_parent"
	   		    	android:layout_height="wrap_content"
	   		    	android:layout_gravity="center_horizontal"
	   		    	android:gravity="center"
	   		    	android:clickable="false"
	   		    	android:text="@string/enter_passcode"
	   		    	android:textColor="#FFFFFF"
	   		    	android:textSize="20sp"
	   		    	android:typeface="sans" />
		    
				<EditText
	   	    		android:layout_width="fill_parent"
	   	        	android:layout_height="wrap_content"
	   	        	android:layout_gravity="center_horizontal"
	   	        	android:inputType="number"
	   	        	android:gravity="center"
	   	        	android:height="80sp"
	   	        	android:lines="1"
	   	        	android:maxLength="4"
	   	        	android:textSize="30sp"
	   	        	android:textStyle="normal"
	   	        	android:typeface="normal"
	   	        	android:digits="0123456789"
	   	        	android:id="@+id/passcode"/>
				
   	        </LinearLayout>
   	  		
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="41.25"/>
			
			<ImageButton
   	       	 	android:id="@+id/continue_button"
   				android:layout_width="fill_parent"
   	       		android:layout_height="wrap_content"
   	       		android:layout_weight="25"
   	       		android:layout_gravity="center_horizontal"
   	       		android:scaleType="fitCenter"
   	      		android:contentDescription="@string/push_btn_cd"
   	      		android:onClick="onContinueButtonClick"
   	      		android:src="@drawable/hover"
   	      		android:background="#00000000" />
		 </LinearLayout>
		 <LinearLayout
		     android:layout_width="wrap_content"
		  	 android:layout_height="match_parent"
		  	 android:layout_weight="33.333"/>
   	</LinearLayout>
	<LinearLayout
	  	android:layout_height="wrap_content"
	  	android:layout_width="fill_parent"
	  	android:layout_weight="8.6" />
</LinearLayout>